# splatoon-battle-analyzer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  TASK.md  docker-compose.yml  pyproject.toml
config/: scoring.yaml
docs/: design.md
src/: __main__.py  api.py  battle_analyzer.py  cli.py  cv_detector.py  frame_extractor.py  frame_source.py  highlight_detector.py  job_store.py  match_scanner.py  scoring_config.py
tests/: conftest.py  test_api.py  test_battle_analyzer.py  test_cli.py  test_cv_detector.py  test_frame_extractor.py  test_frame_source.py  test_highlight_detector.py  test_job_store.py  test_match_scanner.py  test_scoring_config.py
