[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splatoon-battle-analyzer"
version = "0.1.0"
description = "Analyze Splatoon gameplay videos using frame extraction and Ollama Vision API"
requires-python = ">=3.12"
dependencies = [
    "opencv-python-headless>=4.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-ruff>=0.4.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ruff --ruff-format"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.setuptools.packages.find]
include = ["src*"]
