[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splatoon-battle-analyzer"
version = "0.1.0"
description = "Highlight detection API for Splatoon gameplay videos using Claude Vision"
requires-python = ">=3.12"
dependencies = [
    "opencv-python-headless>=4.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-ruff>=0.4.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ruff --ruff-format"

[tool.ruff]
target-version = "py312"
line-length = 100
cache-dir = "/tmp/.ruff_cache"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.setuptools.packages.find]
include = ["src*"]
